Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2826822 by drunken monkey: Fixed use of illegal typed data type "text".
- #2826308 by drunken monkey, mkalkbrenner: Fixed unwanted filter in Views
  tests.
- #2734897 by niko-, drunken monkey: Added tests for preIndexSave()
  implementations.
- #2650364 by drunken monkey: Added a "skip access checks" option to the Views
  relationship plugin.
- #2826160 by keboca, drunken monkey: Fixed config form of "Role filter"
  processor to be more robust.
- #2753815 by niko-, drunken monkey, itsekhmistro, borisson_: Ported Simpletest
  web tests to BrowserTestBase tests.
- #2358065 by tstoeckler: Added the option for highlighting of partial matches
  to the processor.
- #2470837 by sinn, drunken monkey: Added documentation on why to disable Core
  Search.
- #2767609 by drunken monkey, borisson_: Added backend tests for empty value
  conditions.
- #2789431 by phenaproxima, drunken monkey: Added possibility to display
  processor-generated fields in Views.
- #2822553 by niko-: Removed a test assertion that failed when run via GUI.
- #2821445 by drunken monkey: Fixed warning in HTML filter for non-HTML fields.
- #2733185 by sinn, drunken monkey: Added documentation and tests for tracker
  and display plugin alter hooks.
- #2824326 by Jo Fitzgerald: Fixed generated autocomplete suggestions of the DB
  backend.
- #2824932 by mkalkbrenner: Fixed incorrect indexing call in backend tests.
- #2821498 by stBorchert: Increased our required minimum Core version to 8.2.
- #2816979 by drunken monkey: Added click-sorting for indexed fields in Views.
- #2779159 by mark_fullmer, drunken monkey, borisson_: Added a Stemmer
  processor.
- #2799497 by drunken monkey: Added a getter for the Views query's "where"
  property.
- #2574583 by drunken monkey: Fixed loading of entities from excluded bundles.
- #2795861 by sinn: Removed some deprecated methods.
- #2748323 by sinn: Fixed comment reference to removed method